# MathTagOfWar

./: CMakeLists.txt  README.md  main.cpp
include/: ComputerPlayer.h  Difficulty.h  Game.h  Player.h  Question.h  QuestionGenerator.h  ScoreTracker.h  TugOfWarBar.h
src/: ComputerPlayer.cpp  Game.cpp  Player.cpp  Question.cpp  QuestionGenerator.cpp  ScoreTracker.cpp  TugOfWarBar.cpp
